N°3911 Fix datamodel viewer table overflowing in some case

--- a/css/backoffice/pages/_datamodel-viewer.scss
+++ b/css/backoffice/pages/_datamodel-viewer.scss
@@ -33,14 +33,7 @@ $ibo-datamodel-viewer--schema--tooltip--span--margin: 3px !default;
 $ibo-datamodel-viewer--schema--tooltip-top--border-color: $ibo-color-grey-700 !default;
 $ibo-datamodel-viewer--schema--tooltip-top--padding: 3px !default;
 
-
-#ibo-datamodel-viewer{
-  display: flex;
-  flex-direction: row;
-}
-
 .ibo-datamodel-viewer--details{
-  flex-grow: 1;
   .ibo-panel--subtitle{
     @extend %ibo-font-ral-nor-150;
   }
